# shopping-agent

./: README.md  pyproject.toml
src/shopping_agent/: agent.py
